--- a/templates/administration/view/index.html
+++ b/templates/administration/view/index.html
@@ -1,6 +1,20 @@
 {% extends 'administration/base.html' %}
 {% load i18n %}
 {% load static %}
+{% block customCSS %}
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/datatables.net-bs4/3.2.2/dataTables.bootstrap4.min.css"
+          integrity="sha512-ybdqRiNuVPQYM0P7Oa6eO34/xPCBgfL9xndV+d13ARArKsejpRSNycb31xn8yxGrGQISC0VlagTBhS3SWLBVJw=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/datatables.net-responsive-bs4/2.3.0/responsive.bootstrap4.min.css"
+          integrity="sha512-Kep8UHrRwnogj5OXG/g6ZXsfOtdFwJBhcEkEKIKZfiiedZmjwVH3JAyPM3Ag4x6xG1DYf+U/Uu/MFCMkQh+eWQ=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/datatables.net-buttons-bs4/2.2.3/buttons.bootstrap4.min.css"
+          integrity="sha512-qjgDB3iTYTDAAZDtyv6xdGedzfFon3y1yjE/yI2R7HuxKEsY50aXysYFrb2hP3UZbHKiNWKj8tEIhXXFyCi0cA=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
+{% endblock %}
 
 {% block body %}
     <!-- Content Wrapper. Contains page content -->
@@ -148,21 +162,24 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+        <section class="content">
+            <div class="container-fluid">
                 <div class="row">
                     <div class="col-12">
-
                         <div class="card">
-                            <div class="card-header">
+                            <div class="card-header" id="requested_session">
                                 <h3 class="card-title">{% translate "Last 10 requested photoshoot session" %}</h3>
                             </div>
                             <!-- /.card-header -->
                             <div class="card-body">
-                                <table id="example1" class="table table-bordered table-striped">
+                                <table id="example2" class="table table-bordered table-striped">
                                     <thead>
                                     <tr>
+                                        <th>{% translate "Date" %}</th>
                                         <th>{% translate "Name" %}</th>
                                         <th>{% translate "Email" %}</th>
-                                        <th>{% translate "Date" %}</th>
                                         <th>{% translate "Status" %}</th>
                                         <th></th>
                                     </tr>
@@ -170,6 +187,9 @@
                                     <tbody>
                                     {% for rs in request_session %}
                                         <tr>
+                                            <td>
+                                                {{ rs.time_book_taken }}
+                                            </td>
                                             <td>
                                                 &nbsp;&nbsp;&nbsp;{{ rs.full_name }}
                                             </td>
@@ -179,22 +199,22 @@
                                                 </a>
                                             </td>
                                             <td>
-                                                {{ rs.time_book_taken }}
+                                                <span>{{ rs.status.title }}</span>
                                             </td>
-                                            <td>{{ rs.status }}</td>
                                             <td>
-                                                <button class="btn btn-primary">
+                                                <a href="{% url 'administration:session_update' rs.pk %}"
+                                                   class="btn btn-primary">
                                                     <i class="fas fa-edit"></i>&nbsp;Update
-                                                </button>
+                                                </a>
                                             </td>
                                         </tr>
                                     {% endfor %}
                                     </tbody>
                                     <tfoot>
                                     <tr>
+                                        <th>{% translate "Date" %}</th>
                                         <th>{% translate "Name" %}</th>
                                         <th>{% translate "Email" %}</th>
-                                        <th>{% translate "Date" %}</th>
                                         <th>{% translate "Status" %}</th>
                                         <th></th>
                                     </tr>
@@ -207,11 +227,68 @@
                     </div>
                     <!-- /.col -->
                 </div>
+                <!-- /.row -->
             </div>
-        </div>
+            <!-- /.container-fluid -->
+        </section>
     </div>
 {% endblock %}
 {% block customJS %}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.21/js/jquery.dataTables.min.js"
+            integrity="sha512-BkpSL20WETFylMrcirBahHfSnY++H2O1W+UnEEO4yNIl+jI2+zowyoGJpbtk6bx97fBXf++WJHSSK2MV4ghPcg=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.21/js/dataTables.bootstrap4.min.js"
+            integrity="sha512-OQlawZneA7zzfI6B1n1tjUuo3C5mtYuAWpQdg+iI9mkDoo7iFzTqnQHf+K5ThOWNJ9AbXL4+ZDwH7ykySPQc+A=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables-responsive/2.3.0/dataTables.responsive.min.js"
+            integrity="sha512-jHZCTFSeSUkjMMzALVJ5aztNk1+qw1EOhBu6AZIIJo0j4YsCyG4S/feS27WkEAV7C6htBoE4GCqPOjAOodu2Jw=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables.net-responsive-bs4/2.3.0/responsive.bootstrap4.min.js"
+            integrity="sha512-Isz8YdCq0qR8rvj22HWFFfj9vi+ambuHruMv9ctDBb2BDiSfOcY76BcoH5uSVj1nHDbCUb9qeG2CDSTYkaf8QQ=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables-buttons/2.2.3/js/dataTables.buttons.min.js"
+            integrity="sha512-QT3oEXamRhx0x+SRDcgisygyWze0UicgNLFM9Dj5QfJuu2TVyw7xRQfmB0g7Z5/TgCdYKNW15QumLBGWoPefYg=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables.net-buttons-bs4/2.2.3/buttons.bootstrap4.min.js"
+            integrity="sha512-DfTGKO1w5pcl0/oFlkn7icaopS8zAeOKoIfk2MZRIaxX6NlZ7PFSLX83BU5UILhfolXFKN40lk2ftpRbftw+Kw=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"
+            integrity="sha512-XMVd28F1oH/O71fzwBnV7HucLxVwtxf26XV8P4wPk26EDxuGZ91N8bsOttmnomcCD3CS5ZMRL50H0GgOHvegtg=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.5/pdfmake.min.js"
+            integrity="sha512-rDbVu5s98lzXZsmJoMa0DjHNE+RwPJACogUCLyq3Xxm2kJO6qsQwjbE5NDk2DqmlKcxDirCnU1wAzVLe12IM3w=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.5/vfs_fonts.js"
+            integrity="sha512-cktKDgjEiIkPVHYbn8bh/FEyYxmt4JDJJjOCu5/FQAkW4bc911XtKYValiyzBiJigjVEvrIAyQFEbRJZyDA1wQ=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables-buttons/2.2.3/js/buttons.html5.min.js"
+            integrity="sha512-BdN+kHA7QfWIcQE3WMwSj5QAvVUrSGxJLv7/yuEEypMOZBSJ1VKGr9BSpOew+6va9yfGUACw/8Yt7LKNn3RKRA=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables-buttons/2.2.3/js/buttons.print.min.js"
+            integrity="sha512-UthH9WkvNUixebk8yKEFm3Sy+Rm8GbuvxiIMCDs9Cepl+YxhY+LUijPFZshcW7+PHa/HcSFLfSX3fGq1AcglWg=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables-buttons/2.2.3/js/buttons.colVis.min.js"
+            integrity="sha512-TDM0Ek51cJSpP8Btld1ahY8LpMImyQ1k+Ve81qGMdjBLKhADu99JQrUWDuRnT8M0qfkJb+Mt+ZwMaMi46UXA8g=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script>
+        $(function () {
+            $("#example1").DataTable({
+                "responsive": true, "lengthChange": false, "autoWidth": false,
+                "buttons": ["copy", "csv", "excel", "pdf", "print", "colvis"]
+            }).buttons().container().appendTo('#example1_wrapper .col-md-6:eq(0)');
+            $('#example2').DataTable({
+                paging: false,
+                lengthChange: false,
+                searching: true,
+                ordering: false,
+                info: true,
+                autoWidth: false,
+                responsive: true,
+                buttons: ["copy", "csv", "excel", "pdf", "print", "colvis"],
+            }).buttons().container().appendTo('#example2_wrapper .col-md-6:eq(0)');
+        });
+    </script>
     <script>
         var my_chart = {{ book_me_by_month|safe }};
     </script>
