fixed booking page in productions, google blocked emails

--- a/templates/homepage/base.html
+++ b/templates/homepage/base.html
@@ -157,6 +157,7 @@
 <script src="{% static 'homepage/js/instafeed.min.js' %}"></script>
 <script src="{% static 'homepage/js/masonry.pkgd.min.js' %}"></script>
 <script src="{% static 'homepage/js/main.js' %}"></script>
+{% block customJS %}{% endblock %}
 
 <!--end footer-->
 </body>
