--- a/templates/administration/list/list_requested_session.html
+++ b/templates/administration/list/list_requested_session.html
@@ -35,6 +35,8 @@
                     <th>{% translate "Email" %}</th>
                     <th>{% translate "Place" %}</th>
                     <th>{% translate "Status" %}</th>
+                    <th>{% translate "Email sent" %}</th>
+                    <th>{% translate "Action" %}</th>
                     <th></th>
                     <th></th>
                 </tr>
@@ -55,6 +57,19 @@
                         </td>
                         <td>{{ rs.place }}</td>
                         <td>{{ rs.status }}</td>
+                        <td>{{ rs.get_if_email_was_sent_string }}</td>
+                        <td>
+                            {% if not rs.get_if_email_was_sent_boolean and not rs.status_changed %}
+                                <a href="{% url 'administration:send_email' rs.id %}" class="btn btn-primary btn-sm">
+                                    <i class="fas fa-envelope"></i>
+                                    {% translate "Send email" %}
+                                </a>
+                            {% else %}
+                                <a href="" class="btn btn-primary btn-sm disabled">
+                                    <i class="fas fa-envelope"></i>
+                                    {% translate "Send email" %}
+                                </a>
+                            {% endif %}
                         <td>
                             <a href="{% url 'administration:session_update' rs.pk %}" class="btn btn-primary">
                                 <i class="fas fa-edit"></i>&nbsp;Update
@@ -75,6 +90,8 @@
                     <th>{% translate "Email" %}</th>
                     <th>{% translate "Place" %}</th>
                     <th>{% translate "Status" %}</th>
+                    <th>{% translate "Email sent" %}</th>
+                    <th>{% translate "Action" %}</th>
                     <th></th>
                     <th></th>
                 </tr>
