--- a/templates/administration/view/index.html
+++ b/templates/administration/view/index.html
@@ -181,6 +181,8 @@
                                         <th>{% translate "Name" %}</th>
                                         <th>{% translate "Email" %}</th>
                                         <th>{% translate "Status" %}</th>
+                                        <th>{% translate "Email sent" %}</th>
+                                        <th>{% translate "Action" %}</th>
                                         <th></th>
                                     </tr>
                                     </thead>
@@ -201,6 +203,21 @@
                                             <td>
                                                 <span>{{ rs.status.title }}</span>
                                             </td>
+                                            <td>{{ rs.get_if_email_was_sent_string }}</td>
+                                            <td>
+                                                {% if not rs.get_if_email_was_sent_boolean and not rs.status_changed %}
+                                                    <a href="{% url 'administration:send_email' rs.id %}"
+                                                       class="btn btn-primary btn-sm">
+                                                        <i class="fas fa-envelope"></i>
+                                                        {% translate "Send email" %}
+                                                    </a>
+                                                {% else %}
+                                                    <a href="" class="btn btn-primary btn-sm disabled">
+                                                        <i class="fas fa-envelope"></i>
+                                                        {% translate "Send email" %}
+                                                    </a>
+                                                {% endif %}
+                                            <td>
                                             <td>
                                                 <a href="{% url 'administration:session_update' rs.pk %}"
                                                    class="btn btn-primary">
@@ -216,6 +233,8 @@
                                         <th>{% translate "Name" %}</th>
                                         <th>{% translate "Email" %}</th>
                                         <th>{% translate "Status" %}</th>
+                                        <th>{% translate "Email sent" %}</th>
+                                        <th>{% translate "Action" %}</th>
                                         <th></th>
                                     </tr>
                                     </tfoot>
