Aesthetics of button, verbose name in permission class updated

--- a/templates/administration/list/list_contact_forms.html
+++ b/templates/administration/list/list_contact_forms.html
@@ -47,7 +47,7 @@
                             {{ rs.message }}
                         <td>
                             <a href="{% url 'administration:message_delete' rs.pk %}" class="btn btn-danger">
-                                <i class="fas fa-fire"></i>&nbsp;Delete
+                                <i class="fas fa-trash"></i>&nbsp;Delete
                             </a>
                         </td>
                     </tr>
