--- a/templates/administration/list/list_requested_session.html
+++ b/templates/administration/list/list_requested_session.html
@@ -43,9 +43,7 @@
                     <th>{% translate "Place" %}</th>
                     <th>{% translate "Status" %}</th>
                     <th>{% translate "Email sent" %}</th>
-                    <th>{% translate "Action" %}</th>
-                    <th></th>
-                    <th></th>
+                    <th>{% translate "Actions" %}</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -75,22 +73,19 @@
                             {% if not rs.get_if_email_was_sent_boolean and not rs.status_changed %}
                                 <a href="{% url 'administration:send_email' rs.id %}" class="btn btn-primary btn-sm">
                                     <i class="fas fa-envelope"></i>
-                                    {% translate "Send email" %}
+                                    {% translate "Send" %}
                                 </a>
                             {% else %}
                                 <a href="" class="btn btn-primary btn-sm disabled">
                                     <i class="fas fa-envelope"></i>
-                                    {% translate "Send email" %}
+                                    {% translate "Send" %}
                                 </a>
-                            {% endif %}
-                        <td>
-                            <a href="{% url 'administration:session_update' rs.pk %}" class="btn btn-primary">
-                                <i class="fas fa-edit"></i>&nbsp;Update
-                            </a>
-                        </td>
-                        <td>
-                            <a href="{% url 'administration:session_delete' rs.pk %}" class="btn btn-danger">
-                                <i class="fas fa-fire"></i>&nbsp;Delete
+                            {% endif %}&nbsp;
+                            <a href="{% url 'administration:session_update' rs.pk %}" class="btn btn-success btn-sm">
+                                <i class="fas fa-edit"></i>&nbsp;Edit
+                            </a>&nbsp;
+                            <a href="{% url 'administration:session_delete' rs.pk %}" class="btn btn-danger btn-sm">
+                                <i class="fas fa-trash"></i>&nbsp;Delete
                             </a>
                         </td>
                     </tr>
@@ -106,9 +101,7 @@
                     <th>{% translate "Place" %}</th>
                     <th>{% translate "Status" %}</th>
                     <th>{% translate "Email sent" %}</th>
-                    <th>{% translate "Action" %}</th>
-                    <th></th>
-                    <th></th>
+                    <th>{% translate "Actions" %}</th>
                 </tr>
                 </tfoot>
             </table>
