--- a/templates/administration/base.html
+++ b/templates/administration/base.html
@@ -326,8 +326,7 @@
     <footer class="main-footer">
         <div class="copyright">
             Copyright &copy;<script>document.write(new Date().getFullYear());</script>
-            All rights reserved | CRUELTOUCH | Made with <i class="fa fa-heart" aria-hidden="true"></i>
-            by <a href="https://adamspierredavid.com" target="_blank">APD</a>
+            All rights reserved | CRUELTOUCH | <a href="https://adamspierredavid.com" target="_blank">APD</a>
         </div>
     </footer>
 
