--- a/templates/administration/edit/update_requested_session.html
+++ b/templates/administration/edit/update_requested_session.html
@@ -14,6 +14,7 @@
                                 {% csrf_token %}
                                 {{ form.as_p }}
                                 <input type="hidden" name="next" value="{{ request.META.HTTP_REFERER }}">
+                                <a href="{{ request.META.HTTP_REFERER }}" class="btn btn-danger">{% translate "Cancel" %}</a>
                                 <input type="submit" value="{% translate "Update" %}" class="btn btn-primary">
                             </form>
                         </div>
