website send email when contact form filled

--- a/templates/static_pages_and_forms/contact.html
+++ b/templates/static_pages_and_forms/contact.html
@@ -38,7 +38,7 @@
                     <div class="contact-text">
                         <h3>GET IN TOUCH</h3>
                         <p>They say a picture is worth a thousand words.
-                            But I wonder, what else do “they” say?
+                            But I wonder what else do “they” say?
                             In photography there is a reality so subtle that it becomes more real than reality.
                             Taking an image reveals how rich reality truly is.
                             Photography is a way of feeling, of loving.
@@ -47,8 +47,12 @@
                         </p>
                         <ul>
                             <li>Florida, USA</li>
-                            <li>Phone :</li>
-                            <li>crueltouchphoto@gmail.com</li>
+                            <li>
+                                <a href="https://www.instagram.com/crueltouch_/">
+                                    <img src="https://img.icons8.com/office/30/000000/instagram-new.png"/>
+                                    @crueltouch
+                                </a>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -71,7 +75,7 @@
                             {% endfor %}
                         {% endif %}
                         <input class="btn btn-primary prevent_multiple" type="submit" value="Submit"
-                               style="width: 100px"><i class="fa fa-refresh fa-lg fa-spin"></i>
+                               style="width: 100px">
                     </form>
                 </div>
             </div>
